# BeerME

./: README.md
app/: pubspec.yaml
app/android/app/src/main/: AndroidManifest.xml
app/ios/Runner/: Info.plist
app/lib/: api.dart  main.dart
app/lib/dto/: statistics.dart  user.dart
app/lib/fragment/: read_tag.dart  register_form.dart  retrieve_user.dart  statistics.dart
app/lib/model/: user.dart
app/lib/screen/: registration_complete.dart  statistics.dart
app/lib/screens/: register.dart  register_form.dart  registration_complete.dart  statistics.dart
app/lib/service/: user.dart
reader/: main.ino
server/: .env  Cargo.toml  Dockerfile  docker-compose.yml
server/.docker/: init_db.sh
server/src/: app_controller.rs  beer-server.rs  beer_controller.rs  beer_core.rs  beer_service.rs  beer_tracker.rs  beerer.rs  config.rs  daos.rs  database.rs  dtos.rs  entities.rs  reader_controller.rs  rfid_service.rs  setup_db.sh  user_service.rs
server/src/sql/: add_user.sql  beer_brands.sql  delete_beer.sql  delete_user.sql  favorit_beer.sql  get_beer_entries_for_user.sql  get_beer_user_summary.sql  get_last_beer_of_user.sql  get_users.sql  mark_beer_paid.sql  mark_beers_paid.sql  register_beer_taken.sql  schema.sql  seed_beer_brands.sql
server/tests/: app_controller.rs  daos.rs  entities.rs  reader_controller.rs  setup_test_db.sh  test_env  test_utils.rs
server/tests/sql/: init_db.sql
