[package]
name = "beer-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "beer-server"
path = "src/beer-server.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.7.0"
actix-web = "4"
config = "0.13.1"
deadpool-postgres = { version = "0.10.2", features = [ "serde" ] }
env_logger = "0.9.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
dotenv = "0.15.0"
tokio = "1.20"
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
tokio-postgres = "0.7.6"
derive_more = "0.99.17"
futures = "0.3.1"
